# DMHandler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml  dmhandler-build-test.yml  dmhandler-deploy-infrastructure.yml
cdk_dmhandler_pipeline/: app.py
cdk_dmhandler_pipeline/cdk_dmhandler_pipeline/: cdk_dmhandler_pipeline_stack.py
data/: market_data.csv
include/: MarketDataFeedHandler.h  MarketDataGenerator.h  MarketDataMessage.h  MarketDataParser.h  MarketDataSimulator.h  MarketDataStatsTracker.h  MarketDataSubscriber.h  OrderSide.h  SymbolStats.h  ThreadSafeMessageQueue.h  Ticker.h
include/dataSource/: FinnhubConnector.h
include/parser/: FileMarketDataParser.h  FinnhubMarketDataParser.h  GeneratedMarketDataParser.h  MarketDataParser.h  MarketDataParserFactory.h  MarketDataParserRegistry.h
include/rest/: MarketDataRestHandler.h
include/testSubscribers/: FileLoggerSubscriber.h  LoggingSubscriber.h  MarketStatsDataSubscriber.h
include/webSocket/: IxWebSocketClient.h  WebSocket.h
infrastructure/cdk_dmhandler_pipeline/: cdk_dmhandler_pipeline_stack.py
infrastructure/lambda/: lambda_handler.py
infrastructure/tests/unit/: test_cdk_dmhandler_pipeline_stack.py
src/: MarketDataFeedHandler.cpp  MarketDataGenerator.cpp  MarketDataParser.cpp  MarketDataSimulator.cpp  MarketDataStatsTracker.cpp  main.cpp
src/dataSource/: FinnhubConnector.cpp
src/parser/: FileMarketDataParser.cpp  FinnhubMarketDataParser.cpp  GeneratedMarketDataParser.cpp  MarketDataParserFactory.cpp  MarketDataParserRegistry.cpp
src/rest/: MarketDataRestHandler.cpp
src/webSocket/: IxWebSocketClient.cpp
tests/: tests_datasource_finnhubconnector.cpp  tests_feed_handler.cpp  tests_generator.cpp  tests_helper.h  tests_marketdataresthandler.cpp  tests_parser.cpp  tests_simulator.cpp  tests_statsdatasubscriber.cpp  tests_subscriber_fileloggersubscriber.cpp  tests_subscriber_loggingsubscriber.cpp  tests_subscriber_statsdatasubscriber.cpp  tests_thread_safe_message_queue.cpp  tests_websocket.cpp
tests/mock/: MockWebSocketClient.h
utility/: FilePathUtils.h
